plugins/javaFX/testData/highlighting/absenceOfDefineAttributes.fxml
<fx:root type="javafx.scene.layout.GridPane" xmlns:fx="http://javafx.com/fxml">
    <fx:define <error descr="Attribute source is not allowed here">source</error>=""/>
</fx:root>